<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar20"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffd1a4"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.ToolBarStyle"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="我的收據"
        app:titleTextColor="@android:color/white"/>


    <ScrollView
        android:layout_width="match_parent"
        android:background="#ffeedd"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:id="@+id/sv20"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"  >


            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:paddingTop="3dp"
        android:elevation="30dp"
        android:background="#ffeedd"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/forum"
            android:id="@+id/btn20_1"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_house"/>

        <!--<Button-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/buyer"-->
        <!--android:id="@+id/btn19_2"-->
        <!--android:layout_gravity="center" />-->

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            android:id="@+id/btn20_3"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_shoppingbag"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:id="@+id/btn20_4"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_map"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:id="@+id/btn20_5"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_notification"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:id="@+id/bt20_6"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_avatar"/>
    </LinearLayout>
</LinearLayout>
