<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar18"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ffd1a4"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.ToolBarStyle"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="我的地址"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/arrow_back_icon"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:background="#ffeedd"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv18_1"
                android:layout_width="match_parent"
                android:layout_height="383dp" />

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/recyclerView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" >-->


            <!--</android.support.v7.widget.RecyclerView>-->

        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:paddingTop="3dp"
        android:elevation="30dp"
        android:background="#ffeedd"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/forum"
            android:id="@+id/btn18_1"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_house"/>

        <!--<Button-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/buyer"-->
            <!--android:id="@+id/btn18_2"-->
            <!--android:layout_gravity="center" />-->

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            android:id="@+id/btn18_3"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_shoppingbag"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:id="@+id/btn18_4"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_map"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:id="@+id/btn18_5"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_notification"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:id="@+id/btn18_6"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_avatar"/>
    </LinearLayout>
</LinearLayout>
