<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeedd"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar10"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffd1a4"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.ToolBarStyle"
        app:navigationIcon="@drawable/arrow_back_icon"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="我的個人資訊"
        app:titleTextColor="@android:color/white" />
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >




        <ImageButton
            android:layout_width="60dp"
            android:layout_height="match_parent"

            android:background="@drawable/arrowleft"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/ib10_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的個人資訊"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:id="@+id/tv10_1" />

    </LinearLayout>

    -->


<!--    <ScrollView
        android:id="@+id/sv10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="6">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/iv10_1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:src="@mipmap/ic_launcher"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lv10_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </LinearLayout>
   <!-- </ScrollView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.7"
        android:paddingTop="3dp"
        android:elevation="30dp"
        android:background="#ffeedd"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn10_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/forum"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_house"/>

        <!--<Button-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/buyer"-->
        <!--android:id="@+id/btn10_2"-->
        <!--android:layout_gravity="center" />-->

        <Button
            android:id="@+id/btn10_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/seller"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_shoppingbag"/>

        <Button
            android:id="@+id/btn10_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/map"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_map"/>

        <Button
            android:id="@+id/btn10_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/notify"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_notification"/>

        <Button
            android:id="@+id/btn10_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/personal"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:drawableTop="@drawable/button_avatar"/>
    </LinearLayout>
</LinearLayout>
